<resources>
    <string name="app_name">EMVReader</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="card_pan_title">PAN: </string>
    <string name="card_issuer_title">Issuer: </string>
    <string name="expiry_month_title">Expiry Month: </string>
    <string name="expiry_yr_title">Expiry Year: </string>

    <string name="not_available">Not Available</string>

    <string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>
    <string name="error">Error</string>
    <string name="no_nfc">No NFC found on this device</string>
    <string name="welcome_message_1">Welcome to EMV Reader. \nPlease scan your payPass/payWave card with the back of this phone.</string>
    <string name="welcome_message_2">Details of the scanned card is as below:</string>


</resources>
